[package]
name = "vr-lab-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
socket2 = "0.5.4"
tokio = { version = "1.33.0", features = ["socket2", "sync", "rt", "rt-multi-thread", "tracing", "tokio-macros", "full"] }

