workspace = { members = ["test_client"] }
[package]
name = "vr-lab-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
env_logger = "0.11.1"
futures = "0.3.30"
json = "0.12.4"
lazy_static = "1.4.0"
log = "0.4.20"
poem = "1.3.59"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
socket2 = "0.5.4"
strum = { version = "0.26.1", features = ["derive"] }
tokio = { version = "1.33.0", features = ["socket2", "sync", "rt", "rt-multi-thread", "tracing", "tokio-macros", "full"] }
tokio-util = { version = "0.7.10", features = ["full"] }
uuid = { version = "1.5.0", features = ["serde"] }

